ci(build): update image registry and nginx configuration
- changed build configuration to use external registry registry.desku.be
- updated job configuration to pull image from new registry location
- modified nginx deployment to use nginx.conf instead of default.conf
- added security context with non-root execution and capability dropping
- added temporary storage volume for nginx worker processes and temp files

--- a/ci/buildconfig.yaml
+++ b/ci/buildconfig.yaml
@@ -7,8 +7,8 @@ metadata:
 spec:
   output:
     to:
-      kind: ImageStreamTag
-      name: alpinas-iso-builder:latest
+      kind: DockerImage
+      name: registry.desku.be/alpinas/alpinas-iso-builder:latest
   source:
     type: Git
     git:
