--- a/runtime/deployment.yaml
+++ b/runtime/deployment.yaml
@@ -27,8 +27,10 @@ spec:
           mountPath: /usr/share/nginx/html
           readOnly: true
         - name: nginx-config
-          mountPath: /etc/nginx/conf.d/default.conf
-          subPath: default.conf
+          mountPath: /etc/nginx/nginx.conf
+          subPath: nginx.conf
+        - name: tmp
+          mountPath: /tmp
         resources:
           requests:
             memory: "128Mi"
@@ -36,6 +38,12 @@ spec:
           limits:
             memory: "256Mi"
             cpu: "200m"
+        securityContext:
+          allowPrivilegeEscalation: false
+          runAsNonRoot: true
+          capabilities:
+            drop:
+              - ALL
       volumes:
       - name: iso-storage
         persistentVolumeClaim:
@@ -43,6 +51,8 @@ spec:
       - name: nginx-config
         configMap:
           name: nginx-config
+      - name: tmp
+        emptyDir: {}
 ---
 apiVersion: v1
 kind: Service
