--- a/runtime/nginx-config.yaml
+++ b/runtime/nginx-config.yaml
@@ -5,18 +5,46 @@ metadata:
   labels:
     app: alpinas
 data:
-  default.conf: |
-    server {
-        listen 8080;
-        server_name _;
+  nginx.conf: |
+    worker_processes auto;
+    error_log /dev/stderr info;
+    pid /tmp/nginx.pid;
 
-        location / {
-            root /usr/share/nginx/html;
-            autoindex on;
-            autoindex_exact_size off;
-            autoindex_localtime on;
+    events {
+        worker_connections 1024;
+    }
+
+    http {
+        client_body_temp_path /tmp/client_temp;
+        proxy_temp_path /tmp/proxy_temp;
+        fastcgi_temp_path /tmp/fastcgi_temp;
+        uwsgi_temp_path /tmp/uwsgi_temp;
+        scgi_temp_path /tmp/scgi_temp;
+
+        include /etc/nginx/mime.types;
+        default_type application/octet-stream;
+
+        log_format main '$remote_addr - $remote_user [$time_local] "$request" '
+                        '$status $body_bytes_sent "$http_referer" '
+                        '"$http_user_agent" "$http_x_forwarded_for"';
+
+        access_log /dev/stdout main;
+
+        sendfile on;
+        keepalive_timeout 65;
+
+        server {
+            listen 8080;
+            server_name _;
+
+            location / {
+                root /usr/share/nginx/html;
+                autoindex on;
+                autoindex_exact_size off;
+                autoindex_localtime on;
+            }
+
+            # Add CORS headers for ISO downloads
+            add_header Access-Control-Allow-Origin *;
         }
-
-        # Add CORS headers for ISO downloads
-        add_header Access-Control-Allow-Origin *;
     }
