Fix cloud-init reference - use secretRef not userDataSecretRef

--- a/alpinas-vm/vm.yaml
+++ b/alpinas-vm/vm.yaml
@@ -135,5 +135,5 @@ spec:
           name: alpinas-datadisk-4
       - name: cloudinitdisk
         cloudInitNoCloud:
-          userDataSecretRef:
+          secretRef:
             name: alpinas-cloudinit
